# SDL3_bazel

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  main.cpp
.github/workflows/: build.yml
src/: engine.cpp  engine.h  game.cpp  game.h  main.cpp  release_main.cpp  types.h
src/content/: scene.h  state.h
src/ui/: ui.cpp  ui.h
